slideshow/main.css
body,
html {
  height: 100%;
}
body {
  font-family: Helvetica;
  background-repeat: no-repeat;
  background-size: cover;
  height: 3000px;
  margin: 0px;
}

#image-search {
  display: none;
}

#dict-search {
  display: none;
}

.caption-item {
  color: white;
  background-color: black;
  padding: 5px 30px;
  opacity: 0.7;
  border-radius: 10px;
}

#progress-counter {
  position: fixed;
  top: 0;
  right: 0;
  padding: 10px 10px;
  color: white;
  background-color: black;
  opacity: 0.7;
  font-size: 30px;
}

#caption {
  position: absolute;
  margin-top: 7%;
  width: 100%;
  text-align: center;
}

#word {
  font-size: 8em;
  display: inline-block;
}
#word.quiz {
  font-size: 4em;
  text-align: left;
}

#definition {
  font-size: 3em;
  display: inline-block;
  margin-top: 10px;
  max-width: 80%;
}
#definition.quiz {
  font-size: 2.5em;
  text-align: left;
}

.correct {
  color: Lime;
}
.incorrect {
  color: red;
}

#file-area {
  width: 100%;
}

#filedrop {
  display: inline-block;
  margin-left: 5px;
  width: 98%;
  border-radius: 10px;
  font-size: 100px;
  color: white;
  text-align: center;
  height: 400px;
  line-height: 400px;
  background: darkgray;
}

#help {
  z-index: 1;
  position: fixed;
  top: 5%;
  right: 3%;
  border-radius: 5px;
  padding-left: 0.2em;
  padding-right: 2em;
  color: white;
  background-color: black;
  opacity: 0.7;
  font-size: 20px;
}

#words-container {
  position: absolute;
  width: 100%;
}

#active-words {
  width: 60%;
  height: 300px;
}

#removed-words {
  width: 60%;
  height: 300px;
}

#marked-words {
  width: 60%;
  height: 150px;
}

@keyframes flash-message {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0.7;
  }
  100% {
    opacity: 0;
  }
}

.flush-message {
  position: fixed;
  top: 5px;
  left: 5px;
  padding: 10px 10px;
  color: yellow;
  background-color: black;
  border-radius: 5px;
  font-size: 30px;
  animation-name: flash-message;
  animation-duration: 1.2s;
  animation-fill-mode: forwards;
  animation-iteration-count: 1;
}

a {
  text-decoration: none;
}
a:link,
a:visited {
  color: white;
}
a:hover {
  color: white;
}

.button {
  border-radius: 10px;
  border: 2px solid;
  border-color: white;
  font-size: 1.2em;
  display: inline-block;
  cursor: pointer;
  color: white;
  background-color: grey;
  padding: 2px 10px;
  text-decoration: none;
}
.button:hover {
  border-color: grey;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                      supported by Chrome and Opera */
}

